--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,11 +1,11 @@
-name: Latest blog post workflow
+name: Fetch latest blog posts workflow
 on:
-  schedule: # Run workflow automatically
-    - cron: '0 12 * * 7' # Every Sunday at 12:00
-  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the GitHub Actions Workflow page directly
+  schedule:
+    - cron: '0 23 * * 7' # Every Sunday at 23:00
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
-  update-readme-with-blog:
+  fetch-latest-blog-posts-job:
     name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
     steps:
