--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "hendrikprinsza",
+  "name": "mystats",
   "version": "1.0.0",
   "description": "HendrikPrinsZA Readme",
   "main": "bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "mystats-images": "node bin/index.js images"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/HendrikPrinsZA/HendrikPrinsZA#readme",
   "dependencies": {
     "@codersrank/skills-chart": "^0.9.21",
-    "commander": "^9.3.0"
+    "commander": "^9.3.0",
+    "image-downloader": "^4.3.0"
   }
 }
