--- a/.github/workflows/stack-overflow-workflow.yml
+++ b/.github/workflows/stack-overflow-workflow.yml
@@ -1,7 +1,7 @@
 name: Stack Overflow Workflow
 on:
   schedule:
-    - cron: '0 11 * * 7' # Every Sunday at 11:00
+    - cron: 0 11 * * 7 # Every Sunday at 11:00
 
 jobs:
   update-readme-with-stack-overflow:
