--- a/.github/workflows/stats-workflow.yml
+++ b/.github/workflows/stats-workflow.yml
@@ -1,7 +1,7 @@
 name: Stats Workflow
 on:
   schedule:
-    - cron: '0 12 * * 7' # Every Sunday at 12:00
+    - cron: 0 12 * * 7 # Every Sunday at 12:00
 
 jobs:
   fetch-latest-stats-job:
