--- a/.github/workflows/stats-workflow.yml
+++ b/.github/workflows/stats-workflow.yml
@@ -1,10 +1,11 @@
+name: Stats Workflow
 on:
   schedule:
-    - cron: 0 12 * * 7 # Every Sunday at 12:00
+    - cron: '0 12 * * 7' # At 12:00 on Sunday.
 
 jobs:
   fetch-latest-stats-job:
-    name: Update this repo's README with latest blog posts
+    name: Update this repo README with latest blog posts
     runs-on: ubuntu-latest
     permissions: read-all|write-all
     steps:
