--- a/.github/workflows/stack-overflow-workflow.yml
+++ b/.github/workflows/stack-overflow-workflow.yml
@@ -2,6 +2,7 @@ name: Stack Overflow Workflow
 on:
   schedule:
     - cron: '0 11 * * 7' # At 11:00 on Sunday.
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
   update-readme-with-stack-overflow:
