--- a/.github/workflows/stats-workflow.yml
+++ b/.github/workflows/stats-workflow.yml
@@ -2,6 +2,7 @@ name: Stats Workflow
 on:
   schedule:
     - cron: '0 12 * * 7' # At 12:00 on Sunday.
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
   fetch-latest-stats-job:
