--- a/.github/workflows/stack-overflow-workflow.yml
+++ b/.github/workflows/stack-overflow-workflow.yml
@@ -1,7 +1,7 @@
 name: Stack Overflow Workflow
 on:
   schedule:
-    - cron: '0 11 * * 7' # At 11:00 on Sunday.
+    - cron: "0 11 * * 7" # At 11:00 on Sunday.
   workflow_dispatch: # Allow manual trigger
 
 jobs:
