--- a/.github/workflows/stats-workflow.yml
+++ b/.github/workflows/stats-workflow.yml
@@ -13,7 +13,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Node
         uses: actions/setup-node@v3
-      - name: Install NPM dependencies
-        run: npm install
-      - name: Fetch latest images
-        run: npm run mystats-images
+      - run: npm install
+      - run: npm run mystats-images
