--- a/.github/workflows/blog-workflow.yml
+++ b/.github/workflows/blog-workflow.yml
@@ -9,10 +9,8 @@ jobs:
     name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Fetch from Medium
-        uses: gautamkrishnar/blog-post-workflow@v1
+      - uses: actions/checkout@v2
+      - uses: gautamkrishnar/blog-post-workflow@v1
         with:
           comment_tag_name: "MEDIUM"
           commit_message: "Updated readme with the latest medium data"
