--- a/.github/workflows/stats-workflow.yml
+++ b/.github/workflows/stats-workflow.yml
@@ -4,6 +4,8 @@ on:
     - cron: "0 12 * * 7" # At 12:00 on Sunday.
   workflow_dispatch: # Allow manual trigger
 
+permissions:
+
 jobs:
   fetch-latest-stats-job:
     name: Update this repo README with latest blog posts
@@ -12,6 +14,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '18'
       - run: npm install
       - run: npm run mystats-images
