--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,8 +1,9 @@
-name: "Blog Posts Workflow"
+name: Blog Posts Workflow
 on:
   schedule:
-    - cron: "0 10 * * 7" # At 10:00 on Sunday.
-  workflow_dispatch: # Allow manual trigger
+    # Runs every 5 minutes
+    - cron: '*/5 * * * *'
+  workflow_dispatch:
 jobs:
   update-readme-with-blog:
     name: Update this repo's README with latest blog posts
