--- a/.github/workflows/stats-workflow.yml
+++ b/.github/workflows/stats-workflow.yml
@@ -15,3 +15,6 @@ jobs:
           node-version: '18'
       - run: npm install
       - run: npm run mystats-images
+      - name: Git Auto Commit
+        uses: stefanzweifel/git-auto-commit-action@v4.14.1
+
