--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,8 +1,8 @@
 name: Blog Posts Workflow
 on:
   schedule:
-    # Runs every 5 minutes
-    - cron: '*/5 * * * *'
+    # Runs every night
+    - cron: '0 0 * * *'
   workflow_dispatch:
 jobs:
   update-readme-with-blog:
