--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/HendrikPrinsZA/HendrikPrinsZA#readme",
   "dependencies": {
     "@codersrank/skills-chart": "^0.9.21",
+    "@codersrank/summary": "^0.9.13",
     "commander": "^9.3.0",
     "image-downloader": "^4.3.0",
     "text-to-svg": "^3.1.5"
