--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,12 @@
     "sourceType": "module",
     "requireConfigFile": false
   },
-  "plugins": ["svelte3"],
-  "extends": ["eslint:recommended"],
+  "plugins": [
+    "svelte3"
+  ],
+  "extends": [
+    "eslint:recommended"
+  ],
   "overrides": [
     {
       "files": ["**/*.svelte"],
