--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@sveltejs/adapter-static": "^1.0.0-next.44",
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
     "eslint": "^8.25.0",
     "eslint-plugin-svelte3": "^4.0.0",
