--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
   "extends": [
     "eslint:recommended"
   ],
+  "ignorePatterns": [
+    "*.js", 
+    "**/vendor/*.js"
+  ],
   "overrides": [
     {
       "files": ["**/*.svelte"],
