--- a/package.json
+++ b/package.json
@@ -23,24 +23,22 @@
     "url": "https://github.com/HendrikPrinsZA/HendrikPrinsZA/issues"
   },
   "homepage": "https://github.com/HendrikPrinsZA/HendrikPrinsZA#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@codersrank/activity": "^0.9.14",
     "@codersrank/skills-chart": "^0.9.21",
     "@codersrank/summary": "^0.9.13",
-    "commander": "^9.3.0",
-    "image-downloader": "^4.3.0",
-    "text-to-svg": "^3.1.5"
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
     "@sveltejs/adapter-static": "^1.0.0-next.44",
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
+    "commander": "^9.3.0",
     "eslint": "^8.25.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "husky": "^8.0.1",
+    "image-downloader": "^4.3.0",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.8.0",
     "svelte": "^3.49.0",
+    "text-to-svg": "^3.1.5",
     "vite": "^3.1.0"
   }
 }
