--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -32,7 +32,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
-      - name: Upload artifact
+      - name: Build artifacts
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'
+        run: |
+          npm i
+          npm run build
+      - name: Upload artifacts
         uses: actions/upload-pages-artifact@v1
         with:
           path: './dist'
