--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -32,10 +32,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
-      - name: Build artifacts
+      - name: Setup node
         uses: actions/setup-node@v2
         with:
           node-version: '18'
+      - name: Build artifacts 
         run: |
           npm i
           npm run build
