--- a/package.json
+++ b/package.json
@@ -29,15 +29,19 @@
     "@codersrank/skills-chart": "^0.9.21",
     "@codersrank/summary": "^0.9.13",
     "@sveltejs/adapter-static": "^1.0.0-next.44",
+    "@sveltejs/pancake": "^0.0.18",
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
     "commander": "^9.3.0",
+    "d3": "^7.6.1",
     "eslint": "^8.25.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "husky": "^8.0.1",
     "image-downloader": "^4.3.0",
+    "papaparse": "^5.3.2",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.8.0",
     "svelte": "^3.52.0",
+    "svelte-frappe-charts": "^1.9.2",
     "text-to-svg": "^3.1.5",
     "vite": "^3.1.0"
   }
