Changed workflow to force install npm

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -38,7 +38,7 @@ jobs:
           node-version: '18'
       - name: Build artifacts 
         run: |
-          npm i
+          npm i --force
           npm run build
       - name: Upload artifacts
         uses: actions/upload-pages-artifact@v1
