--- a/.github/workflows/stats-workflow.yml
+++ b/.github/workflows/stats-workflow.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - run: npm install
+      - run: npm i --force
       - run: npm run mystats-images
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4.16.0
