--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -38,6 +38,8 @@ jobs:
           node-version: '18'
       - name: Build artifacts 
         run: |
+          echo "Hack: Removed package-lock.json to ensure latest dependencies are installed"
+          rm package-lock.json
           npm i --force
           npm run build
       - name: Upload artifacts
