--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "react-dom": "^18.2.0",
     "text-to-svg": "^3.1.5"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
