--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-# Tracking and analytics
-PUBLIC_GOOGLE_SITE_VERIFICATION=your-google-site-verification-value
+# Google
+PUBLIC_GOOGLE_SITE_VERIFICATION=
+PUBLIC_GOOGLE_TAG_MANAGER_ID=
+
+# Unsplash
+UNSPLASH_API_APP_ID=
+UNSPLASH_API_ACCESS_KEY=
+UNSPLASH_API_SECRET_KEY=
