--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/deno": "github:denoland/deno-astro-adapter",
     "@astrojs/rss": "^4.0.2",
     "@astrojs/svelte": "^5.3.0",
     "@resvg/resvg-js": "^2.6.0",
-    "astro": "^4.2.1",
+    "astro": "^4.5.9",
     "dotenv": "^16.4.5",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
