--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hendrikprinsza",
-  "version": "4.2.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
-    "@astrojs/deno": "github:denoland/deno-astro-adapter",
+    "@astrojs/cloudflare": "^10.0.2",
     "@astrojs/rss": "^4.0.2",
     "@astrojs/svelte": "^5.3.0",
     "@resvg/resvg-js": "^2.6.0",
