--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "remark-toc": "^9.0.0",
     "satori": "^0.10.11",
     "sharp": "^0.33.3",
+    "simplelightbox": "^2.14.3",
     "svelte": "^4.2.12",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.4",
