--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ PUBLIC_GOOGLE_TAG_MANAGER_ID=
 UNSPLASH_API_APP_ID=
 UNSPLASH_API_ACCESS_KEY=
 UNSPLASH_API_SECRET_KEY=
+SECRET_UNSPLASH_API_ACCESS_KEY=
+PUBLIC_UNSPLASH_API_ACCESS_KEY=
+PUBLIC_UNSPLASH_USERNAME=
