--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sharp": "^0.33.3",
     "simplelightbox": "^2.14.3",
     "svelte": "^4.2.12",
+    "svelte-bricks": "^0.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.4",
     "unsplash-js": "^7.0.19"
